--- a/state/src/App.css
+++ b/state/src/App.css
@@ -2,37 +2,30 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.selection_boxes {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 15px;
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.dropdown {
+  padding: 10px;
+  font-size: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.result {
+  font-size: 20px;
+}
+
+
+.highlight {
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.fade {
+  color: gray;
 }
